# vapi_core

./: AUTHORS  Doxyfile  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
doc/: overview.pptx
example/: Makefile.in  common.h
example/host/: Makefile.in  host.c
example/sub/: Makefile.in  sub.c
src/: Makefile.am  Makefile.in  vapi_core.c  vapi_core.h  vapi_core_local.h  vapi_core_sub.c  vapi_core_sub.h
test/: Makefile.am  Makefile.in  common.h
test/host/: Makefile.am  Makefile.in  host.c
test/sub/: Makefile.am  Makefile.in  sub.c
